--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@ $(document).ready(function(){     7//hides 5 6 7 8 th sems and btech cse sem1 su
  				$("#disp").click(function(){
 					if((document.getElementById('csdaa').checked==true || document.getElementById('itdaa').checked==true)&& document.getElementById('MidSem').checked==true && document.getElementById('2016').checked==true)
 					{
-						window.location.assign("QuestionPaperStack/CSE/midsem/4th/daa/2016/web/viewer.html")	
+						window.location.assign("csemid4daa2016.html")	
 					}
 				});
 				});
