--- a/csemid4daa2016.html
+++ b/csemid4daa2016.html
@@ -42,7 +42,7 @@ See https://github.com/adobe-type-tools/cmap-resources
 
 
 
-    <script src="viewer.js"></script>
+    <script src="csemid4daa2016.js"></script>
 
   </head>
 
