--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@ $(document).ready(function(){     7//hides 5 6 7 8 th sems and btech cse sem1 su
  				$("#disp").click(function(){
 					if((document.getElementById('cssp').checked==true || document.getElementById('itsp').checked==true)&& document.getElementById('MidSem').checked==true && document.getElementById('2016').checked==true)
 					{
-						window.location.assign("QuestionPaperStack/CSE/midsem/4th/sp/2016/web/viewer.html")	
+						window.location.assign("csemid4sp2016.html")	
 					}
 				});
 				});
