--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@ $(document).ready(function(){     7//hides 5 6 7 8 th sems and btech cse sem1 su
  				$("#disp").click(function(){
 					if((document.getElementById('cstoc').checked==true || document.getElementById('ittoc').checked==true)&& document.getElementById('MidSem').checked==true && document.getElementById('2016').checked==true)
 					{
-						window.location.assign("QuestionPaperStack/CSE/midsem/4th/toc/2016/web/viewer.html")	
+						window.location.assign("csemid4toc2016.html")	
 					}
 				});
 				});
