--- a/index.html
+++ b/index.html
@@ -1326,7 +1326,9 @@ $(document).ready(function(){     7//hides 5 6 7 8 th sems and btech cse sem1 su
         
         <fieldset data-role="controlgroup" data-type="horizontal">
       		<legend>Year</legend>
-        	<label for="2015">2015</label>
+	    <label for="2014">2014</label>
+        	<input type="radio" name="year" id="2014" value="2014" onClick="">
+            <label for="2015">2015</label>
         	<input type="radio" name="year" id="2015" value="2015" onClick="">
             <label for="2016">2016</label>
         	<input type="radio" name="year" id="2016" value="2016" onClick="">
