--- a/index.html
+++ b/index.html
@@ -950,6 +950,86 @@ $(document).ready(function(){     7//hides 5 6 7 8 th sems and btech cse sem1 su
 					}
 				});
 				});
+				$(document).ready(function(){
+ 				$("#disp").click(function(){
+					if((document.getElementById('csc').checked==true || document.getElementById('itc').checked==true || document.getElementById('etc').checked==true || document.getElementById('eec').checked==true)&& document.getElementById('EndSem').checked==true && document.getElementById('2015').checked==true)
+					{
+						window.location.assign("csemid4toc2015.html")	
+					}
+				});
+				});
+				$(document).ready(function(){
+ 				$("#disp").click(function(){
+					if((document.getElementById('csc').checked==true || document.getElementById('itc').checked==true || document.getElementById('etc').checked==true || document.getElementById('eec').checked==true)&& document.getElementById('EndSem').checked==true && document.getElementById('2016').checked==true)
+					{
+						window.location.assign("allend1Cprog2016.html")	
+					}
+				});
+				});
+				$(document).ready(function(){
+ 				$("#disp").click(function(){
+					if((document.getElementById('csmath2').checked==true || document.getElementById('itmath2').checked==true || document.getElementById('etmath2').checked==true || document.getElementById('eemath2').checked==true)&& document.getElementById('EndSem').checked==true && document.getElementById('2015').checked==true)
+					{
+						window.location.assign("allEnd2ndmath2_2015.html")	
+					}
+				});
+				});
+				$(document).ready(function(){
+ 				$("#disp").click(function(){
+					if((document.getElementById('cschem').checked==true || document.getElementById('itchem').checked==true)&& document.getElementById('EndSem').checked==true && document.getElementById('2015').checked==true)
+					{
+						window.location.assign("cseItend1chem2015.html")	
+					}
+				});
+				});
+				$(document).ready(function(){
+ 				$("#disp").click(function(){
+					if((document.getElementById('csthermo').checked==true || document.getElementById('itthermo').checked==true)&& document.getElementById('EndSem').checked==true && document.getElementById('2014').checked==true)
+					{
+						window.location.assign("cseItend1thermo2014.html")	
+					}
+				});
+				});
+				$(document).ready(function(){
+ 				$("#disp").click(function(){
+					if((document.getElementById('etchem').checked==true || document.getElementById('eechem').checked==true)&& document.getElementById('EndSem').checked==true && document.getElementById('2016').checked==true)
+					{
+						window.location.assign("EtcEeeEnd2ndChem2016.html")	
+					}
+				});
+				});
+				$(document).ready(function(){
+ 				$("#disp").click(function(){
+					if((document.getElementById('csmech').checked==true || document.getElementById('itmech').checked==true)&& document.getElementById('EndSem').checked==true && document.getElementById('2015').checked==true)
+					{
+						window.location.assign("cseItend1mech2015.html")	
+					}
+				});
+				});
+				$(document).ready(function(){
+ 				$("#disp").click(function(){
+					if((document.getElementById('etphy').checked==true || document.getElementById('eephy').checked==true)&& document.getElementById('EndSem').checked==true && document.getElementById('2015').checked==true)
+					{
+						window.location.assign("eeeEtcend1phy2015.html")	
+					}
+				});
+				});
+				$(document).ready(function(){
+ 				$("#disp").click(function(){
+					if((document.getElementById('etthermo').checked==true || document.getElementById('eethermo').checked==true)&& document.getElementById('EndSem').checked==true && document.getElementById('2015').checked==true)
+					{
+						window.location.assign("eeeEtcEnd2ndThermo2015.html")	
+					}
+				});
+				});
+				$(document).ready(function(){
+ 				$("#disp").click(function(){
+					if((document.getElementById('etphy').checked==true || document.getElementById('eephy').checked==true)&& document.getElementById('EndSem').checked==true && document.getElementById('2015').checked==true)
+					{
+						window.location.assign("EeeEtcEndsem2ndsemPhysics2015.html")	
+					}
+				});
+				});
 	</script>
 
 	</script>
@@ -1345,7 +1425,7 @@ $(document).ready(function(){     7//hides 5 6 7 8 th sems and btech cse sem1 su
 	
    
         <div data-role="footer">
-    	<h1>Hi Guys!If you didnt get what u were searching for </h1>
+    	<h1>hi guys</h1>
     </div>
 </div>
 
