--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
+<head><link rel="shortcut icon" href="images/profilelogo1.jpg" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
+<title>IIIT Bhubaneswar</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
@@ -17,13 +17,21 @@
   background-color: cyan;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 25px;
+  margin:auto;
 }
-.img {
+/* .img {
     display: block;
     margin: auto;
-    width: 50%;
+    max-width: 50%;
+}  */
+img {
+    width: 35%;
+    height: auto;
+	
+	left:50%;
+	margin-right: -50%;
+	transform:translate(90%,5%);
 }
-
 </style>
 
 
@@ -1045,9 +1053,9 @@ $(document).ready(function(){     7//hides 5 6 7 8 th sems and btech cse sem1 su
         
     </div>
     <div class="polaroid">
+    	<div class="img">	
   			<img src="images/logo1.jpg" >
-  	<div class="img">
-        <h3>/k·jəˌpɑɪd/</h3>
+  			<h3>For   <u>IIIT  Bhubaneswar</u> , Semester  Question  Paper  Archive</h3>
     	</div>		
 		</div>
     
@@ -1422,7 +1430,7 @@ $(document).ready(function(){     7//hides 5 6 7 8 th sems and btech cse sem1 su
 	
    
         <div data-role="footer">
-    	<h1>hi guys</h1>
+    	<h1>© HKiNG</h1>
     </div>
 </div>
 
