--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
+<head><link rel="shortcut icon" href="images/profilelogo1.jpg" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
+<title>IIIT Bhubaneswar</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
@@ -18,11 +18,15 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 25px;
 }
-.img {
-    display: block;
-    margin: auto;
-    width: 50%;
+img {
+    width: 35%;
+    height: auto;
+	
+	left:50%;
+	margin-right: -50%;
+	transform:translate(90%,5%);
 }
+
 
 </style>
 
@@ -1345,7 +1349,7 @@ $(document).ready(function(){     7//hides 5 6 7 8 th sems and btech cse sem1 su
 	
    
         <div data-role="footer">
-    	<h1>Hi Guys!If you didnt get what u were searching for </h1>
+    	<h1>© HKiNG</h1>
     </div>
 </div>
 
