--- a/index.html
+++ b/index.html
@@ -1055,7 +1055,8 @@ $(document).ready(function(){     7//hides 5 6 7 8 th sems and btech cse sem1 su
     <div class="polaroid">
     	<div class="img">	
   			<img src="images/logo1.jpg" >
-  			<h3>For   <u>IIIT  Bhubaneswar</u> , Semester  Question  Paper  Archive</h3>
+  			<h3><u>IIIT  Bhubaneswar</u>
+			<h3>Semester  Question  Paper  Archive</h3>
     	</div>		
 		</div>
     
